dataset1235/2025-2/805158916/users/1514794398/executions/1584167357_3198308593.log
== SUBMISSION (2025-08-27 15:06:34)
-- CODE: 
import math
raio = float(input("Digite um numero: "))
volume = 4 / 3 * math.pi * raio ** 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
Digite um numero: 696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
Digite um numero: 4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
Digite um numero: 137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
Digite um numero: 4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
Digite um numero: 7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
Digite um numero: 0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:36:16)
-- CODE: 
import math
raio = float(input("Digite um numero: ") 
volume = 4 / 3 * math.pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:41:23)
-- CODE: 
import math
raio = float(input("Digite um numero: "))
volume = 4 / 3 * math.pi * raio ** 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
Digite um numero: 696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
Digite um numero: 4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
Digite um numero: 137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
Digite um numero: 4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
Digite um numero: 7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
Digite um numero: 0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:36:06)
-- CODE: 
import math
raio = float(input("Digite um numero: ") 
volume = 4 / 3 * math.pi * raio * 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:36:30)
-- CODE: 
import math
raio = float(input("Digite um numero: ") 
volume = 4 / 3 * math.pi * raio ** 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:41:13)
-- CODE: 
import math
raio = float(input("Digite um numero: ") 
volume = 4 / 3 * math.pi * raio ** 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero: ") 
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
